<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.kij.goodbyebixby.MainActivity">

    <CheckBox
        android:id="@+id/hapticFeedbackCheckbox"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="34dp"
        android:layout_weight="1"
        android:button="@null"
        android:checked="false"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:duplicateParentState="false"
        android:text="@string/haptic_feedback"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bixbyAssignedLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/bixbyAssignedLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/singleClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/singleClickText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/single_click"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/singleClickAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/none"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="6dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:onClick="openAssignMenu"
            android:id="@+id/doubleClick">

            <TextView
                android:id="@+id/doubleClickText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/double_click"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/doubleClickAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/none"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_margin="6dp"
            android:background="@color/colorDivider"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:onClick="openAssignMenu"
            android:id="@+id/longPress">

            <TextView
                android:id="@+id/longPressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_press"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/longPressAssignedTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/none"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:id="@+id/view6"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:layout_margin="6dp"
            android:background="@color/colorDivider"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressDurationLayout"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/hapticFeedbackCheckbox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/longPressIntervalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_press_interval"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/longPressIntervalSeekBar"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="42.27" />

                <TextView
                    android:id="@+id/longPressIntervalMsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="600ms"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="6dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doubleClickIntervalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/double_click_interval"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/doubleClickIntervalSeekBar"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="42.27" />

                <TextView
                    android:id="@+id/doubleClickIntervalMsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="600ms"
                    android:textAlignment="viewEnd" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
